--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,8 @@
   </head>
 
   <body>
+    <%= render "layouts/header" %>
+    <%= render "layouts/hero" %>
     <main class="container mx-auto mt-28 px-5 flex">
       <%= yield %>
     </main>
