--- a/app/views/layouts/_hero.html.erb
+++ b/app/views/layouts/_hero.html.erb
@@ -5,7 +5,7 @@
                 <h1
                     class="text-4xl sm:text-5xl md:text-5xl lg:text-5xl xl:text-6xl text-center text-gray-800 dark:text-white font-black leading-10">
                   Encontre os melhores
-                    <span class="text-violet-800 dark:text-violet-500">Carros</span>
+                    <span class="text-green-800 dark:text-green-500">Carros</span>
                     de forma rápida e fácil.
                 </h1>
                 <p class="mt-5 sm:mt-10 lg:w-10/12 text-gray-600 dark:text-gray-300 font-normal text-center text-xl">
@@ -18,7 +18,7 @@
                         class="w-full p-3 rounded-md rounded-r-none border border-2 border-gray-300 placeholder-current dark:bg-gray-500  dark:text-gray-300 dark:border-none "
                         placeholder="Digite a marca e o modelo do carro" />
                     <button
-                        class="inline-flex items-center gap-2 bg-violet-700 text-white text-lg font-semibold py-3 px-6 rounded-r-md">
+                        class="inline-flex items-center gap-2 bg-green-700 text-white text-lg font-semibold py-3 px-6 rounded-r-md">
                         <span>Find</span>
                         <svg class="text-gray-200 h-5 w-5 p-0 fill-current" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px"
