--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,17 +1,18 @@
 
 <header class="sticky top-0 z-50 flex justify-between items-center p-5 bg-gray-100 text-gray">
-  <div class="flex items-center space-x-2 font-bold text-xl text-green-500">
+  <div class="container mx-auto flex justify-between items-center">
     <%= link_to root_path do %>
-      <%= image_tag "logo.png", class: "h-10" %>
+      <div class="flex items-center space-x-2 font-bold text-xl text-green-500">
+        <%= image_tag "logo.png", class: "h-10" %>
+        <span><%= business_name %></span>
+      </div>
     <% end %>
+    
+    <%= render "layouts/navbar" %>
 
-    <span>NE Veículos</span>
-  </div>
-  
-  <%= render "layouts/navbar" %>
-
-  <div>
-    <a href="/">Entrar</a>
-    <a href="/">Cadastrar</a>
+    <div>
+      <a href="/">Entrar</a>
+      <a href="/">Cadastrar</a>
+    </div>
   </div>
 </header>
