--- a/app/views/layouts/_hero.html.erb
+++ b/app/views/layouts/_hero.html.erb
@@ -1,4 +1,5 @@
 <div class="dark:bg-gray-800">
+  <div class="container mx-auto flex justify-between items-center">
     <div class="dark:bg-transparent">
         <div class="mx-auto flex flex-col items-center py-12 sm:py-24">
             <div class="w-11/12 sm:w-2/3 lg:flex justify-center items-center flex-col mb-5 sm:mb-10">
@@ -32,4 +33,5 @@
             </div>
         </div>
     </div>
+  </div>
 </div>
