chore: tailwind update

--- a/app/views/layouts/_hero.html.erb
+++ b/app/views/layouts/_hero.html.erb
@@ -4,7 +4,7 @@
         <div class="mx-auto flex flex-col items-center py-12 sm:py-24">
             <div class="w-11/12 sm:w-2/3 lg:flex justify-center items-center flex-col mb-5 sm:mb-10">
                 <h1
-                    class="text-4xl sm:text-5xl md:text-5xl lg:text-5xl xl:text-6xl text-center text-gray-800 dark:text-white font-black leading-10">
+                    class=" text-4xl sm:text-5xl md:text-5xl lg:text-5xl xl:text-6xl text-center dark:text-white font-black leading-10">
                   Encontre os melhores
                     <span class="text-green-800 dark:text-green-500">Carros</span>
                     de forma rápida e fácil.
